# cpptool

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
CppTool-proto/: CMakeLists.txt
CppTool-proto/def/: base.proto  classes.proto  wrapper.proto
cmake/Modules/: FindCXX11.cmake
src/: CMakeLists.txt  demo.cpp  demo.h  main.cpp
src/core/: CMakeLists.txt  clang_interface.hpp  clang_interface_action.cpp  clang_interface_consumer.cpp  ref_util.template.hpp  runtime_context.cpp  runtime_context.hpp
src/export/: CMakeLists.txt  dump_export.cpp  dump_export.hpp  export_api.cpp  export_api.hpp  export_util.cpp  export_util.hpp  protobuf_export.cpp  protobuf_export.hpp  protobuf_output.cpp  protobuf_output.hpp  type_mapper.cpp  type_mapper.hpp  type_mapper.template.hpp
src/visitor/: CMakeLists.txt  primary_visitor.cpp  primary_visitor.hpp
test/case/: decl_scopes.cpp  hello_world.cpp  includer.cpp  test_environ.cpp  to_include.cpp  variables.cpp
